Добавила иконку для верхней владки

--- a/recipe-eggs_sausage_tomato.html
+++ b/recipe-eggs_sausage_tomato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Омлет с овощами - Кулинарные заметки</title>
+    <title>Яйца с сосикой и томатами - Кулинарные заметки</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -113,7 +113,6 @@
     <header class="main-header">
         <div class="header-content">
             <h1>Кулинарные заметки</h1>
-            <p class="header-subtitle">Ваша личная книга рецептов</p>
         </div>
     </header>
 
