Fixed the backward links

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
                 <h2 class="category-title">Завтраки</h2>
                 <div class="recipes-grid">
                     <!-- Рецепт 1 -->
-                    <a href="recipes/breakfst_eggs_sausage_tomato.html" class="recipe-card">
+                    <a href="recipes/breakfst_oat_porridge.html" class="recipe-card">
                         <div class="recipe-image">
-                            <img src="site-photos/eggs_sausage_tomato.png" alt="Яйца с сосикой и томатами">
+                            <img src="site-photos/oat_porridge.png" alt="Овсянка">
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
                         </div>
                         <div class="recipe-info">
-                            <h3>Яйца с сосикой и томатами</h3>
-                            <p class="recipe-time"><i class="far fa-clock"></i> 10 мин</p>
+                            <h3>Овсянка</h3>
+                            <p class="recipe-time"><i class="far fa-clock"></i> 15 мин</p>
                         </div>
                     </a>
                     <!-- Рецепт 1 конец -->
@@ -93,14 +93,14 @@
                             </div>
                         </div>
                         <div class="recipe-info">
-                            <h3>Панкейки с ягодами</h3>
-                            <p class="recipe-time"><i class="far fa-clock"></i> 25 мин</p>
+                            <h3>Американские оладья</h3>
+                            <p class="recipe-time"><i class="far fa-clock"></i> 45 мин</p>
                         </div>
                     </a>
                     <!-- Рецепт 2 конец -->
 
                     <!-- Рецепт 3 -->
-                    <a href="recipes/breakfst_oat_porridge.html" class="recipe-card">
+                    <a href="recipes/breakfst_eggs_sausage_tomato.html" class="recipe-card">
                         <div class="recipe-image">
                             <img src="site-photos/eggs_sausage_tomato.png" alt="Яйца с сосикой и томатами">
                             <div class="recipe-overlay">
