--- a/recipes/breakfst_oat_porridge.html
+++ b/recipes/breakfst_oat_porridge.html
@@ -120,7 +120,7 @@
     </header>
 
     <main class="recipe-page">
-        <a href="index.html" class="back-link">
+        <a href="../index.html" class="back-link">
             <i class="fas fa-arrow-left"></i>
             Вернуться к рецептам
         </a>
@@ -134,7 +134,7 @@
             </div>
         </div>
         
-        <img src="../site-photos/eggs_sausage_tomato.png" 
+        <img src="../site-photos/oat_porridge.png" 
              alt="Овсянка" class="recipe-image-main">
         
         <div class="recipe-content">
