--- a/recipes/breakfst_eggs_sausage_tomato.html
+++ b/recipes/breakfst_eggs_sausage_tomato.html
@@ -120,7 +120,7 @@
     </header>
 
     <main class="recipe-page">
-        <a href="index.html" class="back-link">
+        <a href="../index.html" class="back-link">
             <i class="fas fa-arrow-left"></i>
             Вернуться к рецептам
         </a>
