american pancakes recipe was added

--- a/recipes/breakfst_oat_porridge.html
+++ b/recipes/breakfst_oat_porridge.html
@@ -141,33 +141,29 @@
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>3 яйца</li>
-                    <li>1/2 болгарского перца</li>
-                    <li>1 небольшая луковица</li>
-                    <li>1 помидор</li>
-                    <li>50 г сыра</li>
-                    <li>2 ст. ложки молока</li>
-                    <li>Соль и перец по вкусу</li>
-                    <li>Зелень для украшения</li>
-                    <li>1 ст. ложка растительного масла</li>
+                    <li>60 гр овсянки</li>
+                    <li>280 гр воды</li>
+                    <li>145 гр молока</li>
+                    <li>5 гр сливочного масла</li>
+                    <li>Щепотка соли</li>
+                    <li>Подсластители по вкусу (необязательно)</li>
                 </ul>
             </div>
             
             <div class="instructions">
                 <h2><i class="fas fa-list-ol"></i> Способ приготовления</h2>
                 <ol>
-                    <li>Овощи нарезать кубиками. Лук обжарить на масле до прозрачности.</li>
-                    <li>Добавить перец, готовить 3-4 минуты.</li>
-                    <li>В миске взбить яйца с молоком, солью и перцем.</li>
-                    <li>Вылить яичную смесь к овощам, убавить огонь.</li>
-                    <li>Посыпать натертым сыром, накрыть крышкой.</li>
-                    <li>Готовить 5-7 минут на медленном огне.</li>
-                    <li>Перед подачей посыпать зеленью.</li>
+                    <li>На треть стакана овсянки потребуется две трети стакана воды и треть стакана молока.</li>
+                    <li>Воду с молоком нагреваем до закипания (для ускорения процесса можно взять закипевшую воду из чайника).</li>
+                    <li>Добавляем овсянку и убавляем огонь до 4/9. Постоянно помешиваем овсянку. Чем ближе она к готовности, тем чаще ее нужно мешать. </li>
+                    <li>В конце добавляем соль, подсластители, масло и еремешиваем.</li>
+                    <li>Выключаем огонь и убираем кастрюльку с плиты.</li>
+                    <li>Перед подачей дать отдохнуть каше 5 минут. </li>
                 </ol>
             </div>
             
             <div class="note">
-                <p><strong>Совет:</strong> Для пышного омлета добавьте щепотку соды в яичную смесь. Подавать горячим с тостами.</p>
+                <p><strong>Совет:</strong> Сгущенка дает более нежную сладость по сравнению с сахаром. Так же можно добавлять разные виды курдов или джемов.</p>
             </div>
         </div>
     </main>
