eggs recipe was added

--- a/recipes/breakfst_oat_porridge.html
+++ b/recipes/breakfst_oat_porridge.html
@@ -156,14 +156,14 @@
                     <li>На треть стакана овсянки потребуется две трети стакана воды и треть стакана молока.</li>
                     <li>Воду с молоком нагреваем до закипания (для ускорения процесса можно взять закипевшую воду из чайника).</li>
                     <li>Добавляем овсянку и убавляем огонь до 4/9. Постоянно помешиваем овсянку. Чем ближе она к готовности, тем чаще ее нужно мешать. </li>
-                    <li>В конце добавляем соль, подсластители, масло и еремешиваем.</li>
+                    <li>В конце добавляем соль, подсластители, масло и перемешиваем.</li>
                     <li>Выключаем огонь и убираем кастрюльку с плиты.</li>
                     <li>Перед подачей дать отдохнуть каше 5 минут. </li>
                 </ol>
             </div>
             
             <div class="note">
-                <p><strong>Совет:</strong> Сгущенка дает более нежную сладость по сравнению с сахаром. Так же можно добавлять разные виды курдов или джемов.</p>
+                <p><strong>Совет:</strong> Сгущенка дает более нежную сладость по сравнению с сахаром. Также можно добавлять разные виды курдов или джемов.</p>
             </div>
         </div>
     </main>
