snacks gallery added

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div>
                         <div class="recipe-info">
                             <h3>Американские оладья</h3>
-                            <p class="recipe-time"><i class="far fa-clock"></i> 45 мин</p>
+                            <p class="recipe-time"><i class="far fa-clock"></i> 45 мин (25 мин активных)</p>
                         </div>
                     </a>
                     <!-- Рецепт 2 конец -->
@@ -117,40 +117,99 @@
                 </div>
             </div>
             
-            <!-- Закуски (остальные вкладки по аналогии) -->
-            <div class="tab-content active" id="snacks">
-                <h2 class="category-title">Закуски</h2>
+            <!-- Закуски -->
+            <div class="tab-content active" id="snacks"> <!-- НАЗВАНИЕ РАЗДЕЛА -->
+                <h2 class="category-title">Закуски</h2> <!-- НАЗВАНИЕ РАЗДЕЛА -->
                 <div class="recipes-grid">
                     <!-- Рецепт 1 -->
-                    <a href="recipe-eggs_sausage_tomato.html" class="recipe-card">
+                    <a href="recipes/snacks_semi_salted_cucumbers.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
                         <div class="recipe-image">
-                            <img src="site-photos/eggs_sausage_tomato.png" alt="Яйца с сосикой и томатами">
+                            <img src="site-photos/oat_porridge.png" alt="Маринованные оугрцы"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
                         </div>
                         <div class="recipe-info">
-                            <h3>Яйца с сосикой и томатами</h3>
-                            <p class="recipe-time"><i class="far fa-clock"></i> 10 мин</p>
+                            <h3>Маринованные оугрцы</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
+                            <p class="recipe-time"><i class="far fa-clock"></i> 65 мин (5 мин активных) </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
                         </div>
                     </a>
                     <!-- Рецепт 1 конец -->
 
                     <!-- Рецепт 2 -->
-                    <a href="recipe-pancakes.html" class="recipe-card">
+                    <a href="recipes/snacks_fried_zucchini.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
                         <div class="recipe-image">
-                            <img src="https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Панкейки">
+                            <img src="site-photos/oat_porridge.png" alt="Жареные кабачки"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
                         </div>
                         <div class="recipe-info">
-                            <h3>Панкейки с ягодами</h3>
-                            <p class="recipe-time"><i class="far fa-clock"></i> 25 мин</p>
+                            <h3>Жареные кабачки</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
+                            <p class="recipe-time"><i class="far fa-clock"></i> 20 мин</p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
                         </div>
                     </a>
                     <!-- Рецепт 2 конец -->
-                    
+
+                    <!-- Рецепт 3 -->
+                    <a href="recipes/snacks_marinated_mashrooms.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
+                        <div class="recipe-image">
+                            <img src="site-photos/oat_porridge.png" alt="Маринованные грибы"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <div class="recipe-overlay">
+                                <i class="fas fa-external-link-alt"></i>
+                            </div>
+                        </div>
+                        <div class="recipe-info">
+                            <h3>Маринованные грибы</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
+                            <p class="recipe-time"><i class="far fa-clock"></i> 60 мин (25 мин активных) </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
+                        </div>
+                    </a>
+                    <!-- Рецепт 3 конец -->
+
+                    <!-- Рецепт 4 -->
+                    <a href="recipes/snacks_greek_salad.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
+                        <div class="recipe-image">
+                            <img src="site-photos/oat_porridge.png" alt="Греческий салат"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <div class="recipe-overlay">
+                                <i class="fas fa-external-link-alt"></i>
+                            </div>
+                        </div>
+                        <div class="recipe-info">
+                            <h3>Греческий салат</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
+                            <p class="recipe-time"><i class="far fa-clock"></i> 5 мин </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
+                        </div>
+                    </a>
+                    <!-- Рецепт 4 конец -->
+
+                    <!-- Рецепт 5 -->
+                    <a href="recipes/snacks_green_salad_with_balsamic.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
+                        <div class="recipe-image">
+                            <img src="site-photos/oat_porridge.png" alt="Салатные листья с бальзамиком"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <div class="recipe-overlay">
+                                <i class="fas fa-external-link-alt"></i>
+                            </div>
+                        </div>
+                        <div class="recipe-info">
+                            <h3>Салатные листья с бальзамиком</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
+                            <p class="recipe-time"><i class="far fa-clock"></i> 2 мин </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
+                        </div>
+                    </a>
+                    <!-- Рецепт 5 конец -->
+
+                    <!-- Рецепт 6 -->
+                    <a href="recipes/snacks_salad_with_yogurt_dressing.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
+                        <div class="recipe-image">
+                            <img src="site-photos/oat_porridge.png" alt="Зеленый салат с йогуртовым соусом"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <div class="recipe-overlay">
+                                <i class="fas fa-external-link-alt"></i>
+                            </div>
+                        </div>
+                        <div class="recipe-info">
+                            <h3>Зеленый салат с йогуртовым соусом</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
+                            <p class="recipe-time"><i class="far fa-clock"></i> 5 мин </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
+                        </div>
+                    </a>
+                    <!-- Рецепт 6 конец -->
                 </div>
             </div>
 
@@ -162,7 +221,7 @@
 
     <!-- Подвал -->
     <footer class="main-footer">
-        <p> 2025 Кулинарные заметки.</p>
+        <p>2026 Кулинарные заметки</p>
         <p class="footer-note">С любовью к вкусной еде ❤️</p>
     </footer>
 
