--- a/recipes/breakfst_american_style_pancakes.html
+++ b/recipes/breakfst_american_style_pancakes.html
@@ -170,7 +170,7 @@
     </main>
 
     <footer class="main-footer">
-        <p>© 2023 Кулинарные заметки. Все права защищены.</p>
+        <p>2026 Кулинарные заметки</p>
         <p class="footer-note">С любовью к вкусной еде ❤️</p>
     </footer>
 
