finilised the breakfast recipies

--- a/index.html
+++ b/index.html
@@ -70,24 +70,9 @@
                 <h2 class="category-title">Завтраки</h2>
                 <div class="recipes-grid">
                     <!-- Рецепт 1 -->
-                    <a href="recipes/breakfst_oat_porridge.html" class="recipe-card">
+                    <a href="recipes/breakfast_american_style_pancakes.html" class="recipe-card">
                         <div class="recipe-image">
-                            <img src="site-photos/oat_porridge.png" alt="Овсянка">
-                            <div class="recipe-overlay">
-                                <i class="fas fa-external-link-alt"></i>
-                            </div>
-                        </div>
-                        <div class="recipe-info">
-                            <h3>Овсянка</h3>
-                            <p class="recipe-time"><i class="far fa-clock"></i> 15 мин</p>
-                        </div>
-                    </a>
-                    <!-- Рецепт 1 конец -->
-
-                    <!-- Рецепт 2 -->
-                    <a href="recipes/breakfst_american_style_pancakes.html" class="recipe-card">
-                        <div class="recipe-image">
-                            <img src="site-photos/american_style_pancakes.png" alt="Американские оладья">
+                            <img src="site-photos/breakfast_american_style_pancakes.png" alt="Американские оладья">
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
@@ -97,12 +82,27 @@
                             <p class="recipe-time"><i class="far fa-clock"></i> 45 мин (25 мин активных)</p>
                         </div>
                     </a>
+                    <!-- Рецепт 1 конец -->
+
+                    <!-- Рецепт 2 -->
+                    <a href="recipes/breakfast_oat_porridge.html" class="recipe-card">
+                        <div class="recipe-image">
+                            <img src="site-photos/breakfast_oat_porridge.png" alt="Овсянка">
+                            <div class="recipe-overlay">
+                                <i class="fas fa-external-link-alt"></i>
+                            </div>
+                        </div>
+                        <div class="recipe-info">
+                            <h3>Овсянка</h3>
+                            <p class="recipe-time"><i class="far fa-clock"></i> 15 мин</p>
+                        </div>
+                    </a>
                     <!-- Рецепт 2 конец -->
 
                     <!-- Рецепт 3 -->
-                    <a href="recipes/breakfst_eggs_sausage_tomato.html" class="recipe-card">
+                    <a href="recipes/breakfast_eggs_sausage_tomato.html" class="recipe-card">
                         <div class="recipe-image">
-                            <img src="site-photos/eggs_sausage_tomato.png" alt="Яйца с сосикой и томатами">
+                            <img src="site-photos/breakfast_eggs_sausage_tomato.jpg" alt="Яйца с сосикой и томатами">
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
@@ -122,16 +122,16 @@
                 <h2 class="category-title">Закуски</h2> <!-- НАЗВАНИЕ РАЗДЕЛА -->
                 <div class="recipes-grid">
                     <!-- Рецепт 1 -->
-                    <a href="recipes/snacks_semi_salted_cucumbers.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
+                    <a href="recipes/snacks_greek_salad.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
                         <div class="recipe-image">
-                            <img src="site-photos/oat_porridge.png" alt="Маринованные оугрцы"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <img src="site-photos/snacks_greek_salad.html.jpg" alt="Греческий салат"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
                         </div>
                         <div class="recipe-info">
-                            <h3>Маринованные оугрцы</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
-                            <p class="recipe-time"><i class="far fa-clock"></i> 65 мин (5 мин активных) </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
+                            <h3>Греческий салат</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
+                            <p class="recipe-time"><i class="far fa-clock"></i> 10 мин </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
                         </div>
                     </a>
                     <!-- Рецепт 1 конец -->
@@ -139,7 +139,7 @@
                     <!-- Рецепт 2 -->
                     <a href="recipes/snacks_fried_zucchini.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
                         <div class="recipe-image">
-                            <img src="site-photos/oat_porridge.png" alt="Жареные кабачки"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <img src="site-photos/snacks_fried_zucchini.jpg" alt="Жареные кабачки"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
@@ -152,9 +152,24 @@
                     <!-- Рецепт 2 конец -->
 
                     <!-- Рецепт 3 -->
+                    <a href="recipes/snacks_salad_with_yogurt_dressing.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
+                        <div class="recipe-image">
+                            <img src="site-photos/snacks_salad_with_yogurt_dressing.jpg" alt="Зеленый салат с йогуртовым соусом"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <div class="recipe-overlay">
+                                <i class="fas fa-external-link-alt"></i>
+                            </div>
+                        </div>
+                        <div class="recipe-info">
+                            <h3>Зеленый салат с йогуртовым соусом</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
+                            <p class="recipe-time"><i class="far fa-clock"></i> 7 мин </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
+                        </div>
+                    </a>
+                    <!-- Рецепт 3 конец -->
+
+                    <!-- Рецепт 4 -->
                     <a href="recipes/snacks_marinated_mashrooms.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
                         <div class="recipe-image">
-                            <img src="site-photos/oat_porridge.png" alt="Маринованные грибы"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <img src="site-photos/snacks_marinated_mashrooms.jpg" alt="Маринованные грибы"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
@@ -164,24 +179,24 @@
                             <p class="recipe-time"><i class="far fa-clock"></i> 60 мин (25 мин активных) </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
                         </div>
                     </a>
-                    <!-- Рецепт 3 конец -->
+                    <!-- Рецепт 4 конец -->
 
-                    <!-- Рецепт 4 -->
-                    <a href="recipes/snacks_greek_salad.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
+                    <!-- Рецепт 5 -->
+                    <a href="recipes/snacks_semi_salted_cucumbers.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
                         <div class="recipe-image">
-                            <img src="site-photos/oat_porridge.png" alt="Греческий салат"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <img src="site-photos/snacks_semi_salted_cucumbers.jpg" alt="Маринованные огурцы"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
                         </div>
                         <div class="recipe-info">
-                            <h3>Греческий салат</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
-                            <p class="recipe-time"><i class="far fa-clock"></i> 5 мин </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
+                            <h3>Маринованные огурцы</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
+                            <p class="recipe-time"><i class="far fa-clock"></i> 65 мин (5 мин активных) </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
                         </div>
                     </a>
-                    <!-- Рецепт 4 конец -->
+                    <!-- Рецепт 5 конец -->
 
-                    <!-- Рецепт 5 -->
+                    <!-- Рецепт 6 -->
                     <a href="recipes/snacks_green_salad_with_balsamic.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
                         <div class="recipe-image">
                             <img src="site-photos/oat_porridge.png" alt="Салатные листья с бальзамиком"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
@@ -191,21 +206,6 @@
                         </div>
                         <div class="recipe-info">
                             <h3>Салатные листья с бальзамиком</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
-                            <p class="recipe-time"><i class="far fa-clock"></i> 2 мин </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
-                        </div>
-                    </a>
-                    <!-- Рецепт 5 конец -->
-
-                    <!-- Рецепт 6 -->
-                    <a href="recipes/snacks_salad_with_yogurt_dressing.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
-                        <div class="recipe-image">
-                            <img src="site-photos/oat_porridge.png" alt="Зеленый салат с йогуртовым соусом"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
-                            <div class="recipe-overlay">
-                                <i class="fas fa-external-link-alt"></i>
-                            </div>
-                        </div>
-                        <div class="recipe-info">
-                            <h3>Зеленый салат с йогуртовым соусом</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
                             <p class="recipe-time"><i class="far fa-clock"></i> 5 мин </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
                         </div>
                     </a>
