--- a/recipes/snacks_semi_salted_cucumbers.html
+++ b/recipes/snacks_semi_salted_cucumbers.html
@@ -133,7 +133,7 @@
             </div>
         </div>
         
-        <img src="../site-photos/american_style_pancakes.png" 
+        <img src="../site-photos/snacks_semi_salted_cucumbers.jpg" 
              alt="Маринованные огурцы" class="recipe-image-main"> <!-- ДОБАВИТЬ ФОТО -->
         
         <div class="recipe-content">
