add snaks recipes text

--- a/recipes/breakfast_american_style_pancakes.html
+++ b/recipes/breakfast_american_style_pancakes.html
@@ -142,9 +142,9 @@
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
                     <li>330 мл теплого кефира</li>
-                    <li>200 гр муки</li>
+                    <li>200 г муки</li>
                     <li>1 яйцо</li>
-                    <li>1,5 стл.л. сахара</li>
+                    <li>1,5 ст.л. сахара</li>
                     <li>2 ст.л. подсолнечного масла</li>
                     <li>1 ч.л. разрыхлителя</li>
                     <li>1/2 ч.л. соды</li>
