--- a/recipes/breakfast_oat_porridge.html
+++ b/recipes/breakfast_oat_porridge.html
@@ -140,10 +140,10 @@
             <div class="ingredients">
                 <h2><i class="fas fa-shopping-basket"></i> Ингредиенты</h2>
                 <ul>
-                    <li>60 гр овсянки</li>
-                    <li>280 гр воды</li>
-                    <li>145 гр молока</li>
-                    <li>5 гр сливочного масла</li>
+                    <li>60 г овсянки</li>
+                    <li>280 г воды</li>
+                    <li>145 г молока</li>
+                    <li>5 г сливочного масла</li>
                     <li>Щепотка соли</li>
                     <li>Подсластители по вкусу (необязательно)</li>
                 </ul>
