--- a/recipes/breakfast_american_style_pancakes.html
+++ b/recipes/breakfast_american_style_pancakes.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="header-content">
+        <div class="header-top">  <!-- Было header-content, стало header-top -->
             <h1>Кулинарные заметки</h1>
         </div>
     </header>
@@ -171,10 +171,17 @@
     </main>
 
     <footer class="main-footer">
-        <p>2026 Кулинарные заметки</p>
-        <p class="footer-note">С любовью к вкусной еде ❤️</p>
+        <div class="footer-content">
+            <div class="footer-lang-switcher">
+                <button class="footer-lang-btn active" data-lang="ru">RU</button>
+                <button class="footer-lang-btn" data-lang="en">EN</button>
+            </div>
+            <p>2026 Кулинарные заметки</p>
+            <p class="footer-note">С любовью к вкусной еде ❤️</p>
+        </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../translations.js" defer></script>
+    <script src="../script.js" defer></script>
 </body>
 </html>
