--- a/recipes/breakfast_oat_porridge.html
+++ b/recipes/breakfast_oat_porridge.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="header-content">
+        <div class="header-top">  <!-- Было header-content, стало header-top -->
             <h1>Кулинарные заметки</h1>
         </div>
     </header>
@@ -155,8 +155,8 @@
                     <li>На 1/3 стакана овсяных хлопьев возьмите 2/3 стакана воды и 1/3 стакана молока.</li>
                     <li>Доведите воду с молоком до кипения. Чтобы ускорить процесс, можно использовать заранее вскипяченную воду.</li>
                     <li>Добавьте овсяные хлопья, уменьшите огонь до среднего и варите, регулярно помешивая. По мере загустения перемешивайте чаще.</li>
-                    <li>В конце приготовления добавьте соль, подсластитель и масло, аккуратно перемешайте.</li>
-                    <li>Снимите кастрюлю с плиты.</li>
+                    <li>В конце приготовления добавьте соль, подсластитель и масло, перемешайте.</li>
+                    <li>Снимите кастрюлю с плиты и накройте крышкой.</li>
                     <li>Перед подачей дайте каше настояться 5 минут.</li>
                 </ol>
             </div>
@@ -168,10 +168,17 @@
     </main>
 
     <footer class="main-footer">
-        <p>2026 Кулинарные заметки</p>
-        <p class="footer-note">С любовью к вкусной еде ❤️</p>
+        <div class="footer-content">
+            <div class="footer-lang-switcher">
+                <button class="footer-lang-btn active" data-lang="ru">RU</button>
+                <button class="footer-lang-btn" data-lang="en">EN</button>
+            </div>
+            <p>2026 Кулинарные заметки</p>
+            <p class="footer-note">С любовью к вкусной еде ❤️</p>
+        </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../translations.js" defer></script>
+    <script src="../script.js" defer></script>
 </body>
 </html>
