add naother english recipe

--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
                 <h2 class="category-title">Закуски</h2> <!-- НАЗВАНИЕ РАЗДЕЛА -->
                 <div class="recipes-grid">
                     <!-- Рецепт 1 -->
-                    <a href="recipes/snacks_greek_salad.html" class="recipe-card"> <!-- ДОБАВИТЬ ССЫЛКУ НА СТРАНИЦУ -->
+                    <a href="recipes/snacks_greek_salad.html" class="recipe-card"> 
                         <div class="recipe-image">
-                            <img src="site-photos/snacks_greek_salad.html.jpg" alt="Греческий салат"> <!-- ДОБАВИТЬ ФОТОГРАФИЮ И НАЗВАНИЕ -->
+                            <img src="site-photos/snacks_greek_salad.jpg" alt="Греческий салат"> 
                             <div class="recipe-overlay">
                                 <i class="fas fa-external-link-alt"></i>
                             </div>
                         </div>
                         <div class="recipe-info">
-                            <h3>Греческий салат</h3> <!-- НАЗВАНИЕ РЕЦЕПТА -->
-                            <p class="recipe-time"><i class="far fa-clock"></i> 10 мин </p> <!-- ВРЕМЯ ПРИГОТОВЛЕНИЯ -->
+                            <h3>Греческий салат</h3> 
+                            <p class="recipe-time"><i class="far fa-clock"></i> 10 мин </p> 
                         </div>
                     </a>
                     <!-- Рецепт 1 конец -->
