added icons far saving in ios

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кулинарные заметки</title>
+
     <!-- Favicon (иконка вкладки) -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Кулинарные заметки">
+    
+    <!-- Иконки для разных устройств Apple -->
+    <link rel="apple-touch-icon" href="assets/icons/icons8-girl-64.png">
     <link rel="icon" href="assets/icons/icons8-girl-64.png" type="image/png">
+    <link rel="manifest" href="manifest.json">
     <!-- Стили -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
